# bipo

./: README.md  gazebo_sim.sh  rviz.sh
src/joint_trajectory_action_client/: CMakeLists.txt  package.xml
src/joint_trajectory_action_client/launch/: testwalk_position.launch.py
src/joint_trajectory_action_client/scripts/: testwalk_position.py
src/simu_bipo/: CMakeLists.txt  package.xml
src/simu_bipo/config/: config_file.rviz  controller_bipo_position.yaml
src/simu_bipo/description/: arobot.urdf.xacro  bipo.xacro  gazebo_references.xacro  ros2_control.xacro
src/simu_bipo/launch/: gazebo_sim.launch.py  joint_trajectory_client_launch.py  rsp.launch.py  rviz.launch.py  start_gait.launch.py
src/simu_bipo/meshes/: L_0_link.STL  L_1_link.STL  L_2_link.STL  L_4_link.STL  L_5_link.STL  L_6_link.STL  L_7_link.STL
src/simu_bipo/scripts/: joint_trajectory_client.py  start_gait.py
src/simu_bipo/worlds/: obstacles.world
