<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_trajectory_action_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vitor@todo.todo">vitor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclpy</buildtool_depend>

<!-- NEW DEPENDENCIES -->
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>action_msgs</exec_depend>
<!-- -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- Declare a execução do script Python -->
    <executable name="testwalk_position" />

     <!-- Declare o diretório de scripts Python -->
    <ament_python_destination_directory>lib/${PROJECT_NAME}</ament_python_destination_directory>
  </export>
</package>
